--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,25 @@ dependencies:
   provider: ^6.1.1
   cloud_firestore: ^4.13.6
   firebase_auth: ^4.15.3
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/main_icons.png"
+  min_sdk_android: 16 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/main_icons.png"
+    background_color: "#C2F6FA"
+    theme_color: "#C2F6FA"
+  windows:
+    generate: true
+    image_path: "assets/main_icons.png"
+    icon_size: 256 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/main_icons.png"
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +70,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: "^0.13.1"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,6 +82,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
