--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
+ord.gradle.jvmargs=-XX\:MaxHeapSize\=256m -Xmx256m
