--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.13.6
   firebase_auth: ^4.15.3
   flutter_launcher_icons: ^0.13.1
+  google_sign_in: ^6.2.1
 
 flutter_launcher_icons:
   android: true
