--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_auth: ^4.15.3
   flutter_launcher_icons: ^0.13.1
   google_sign_in: ^6.2.1
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
 
 flutter_launcher_icons:
   android: true
